#working on onion graphics

--- a/src/directives/content/content.dir.less
+++ b/src/directives/content/content.dir.less
@@ -2,9 +2,15 @@
 
 content {
     display: block;
-
+    position: relative;
 
     // border: solid 4px red;
+
+    img {
+        position: absolute;
+        left: 0;
+        top: 0;
+    }
 
 
     .content {
