--- a/src/all.css
+++ b/src/all.css
@@ -10,6 +10,12 @@
 
 content {
   display: block;
+  position: relative;
+}
+content img {
+  position: absolute;
+  left: 0;
+  top: 0;
 }
 content .content {
   outline: solid 8px transparent;
